--- a/g08-project/package.json
+++ b/g08-project/package.json
@@ -15,6 +15,8 @@
   "dependencies": {
     "file-saver": "^2.0.0",
     "html2canvas": "^1.0.0-alpha.12",
+    "three": "^0.99.0",
+    "three-orbitcontrols": "^2.99.1",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
